improve #8: increase viewport padding to avoid toolbar by default.
* of course, if you pan the video it can still end up under the toolbar.
* but it won't overlap by default now.
* sadly this does make the video area noticeably smaller.
* resolves #8.

--- a/project/src/styles.sass
+++ b/project/src/styles.sass
@@ -242,7 +242,7 @@ html, body
   overflow: hidden
 
 .vannot-video
-  @include fill(20px)
+  @include fill(55px)
 
   video
     @include center-vert
